examples/test/testpolicy14932.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14932
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key33: value48
      key5: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value43
      podSelector:
        matchLabels:
          key29: value32
          key22: value43
          key34: value13
